// Nexus_Fulfillment — Fulfillment Service

Table warehouses {
  id uuid [pk]
  code varchar(20) [unique, not null]
  name varchar(200) [not null]
  address text
  is_active boolean [not null, default: true]
  created_at datetime [not null]
}

Table inventory_records {
  id uuid [pk]
  sku_code varchar(100) [not null]
  warehouse_id uuid [not null]
  total_quantity int [not null, default: 0]
  available_quantity int [not null, default: 0]
  reserved_quantity int [not null, default: 0]
  unavailable_quantity int [not null, default: 0]
  version bigint [not null, default: 0]
  updated_at datetime [not null]
  indexes { (sku_code, warehouse_id) [unique] }
}

Table inventory_reservations {
  id uuid [pk]
  sku_code varchar(100) [not null]
  warehouse_id uuid [not null]
  quantity int [not null]
  reference_type varchar(30) [not null]
  reference_id uuid [not null]
  status varchar(20) [not null, default: 'ACTIVE']
  expires_at datetime [not null]
  idempotency_key varchar(64) [unique]
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table inventory_ledger {
  id uuid [pk]
  sku_code varchar(100) [not null]
  warehouse_id uuid [not null]
  movement_type varchar(20) [not null]
  quantity_delta int [not null]
  reference_type varchar(30)
  reference_id uuid
  note text
  created_at datetime [not null]
}

Table shipments {
  id uuid [pk]
  order_id uuid [not null, note: 'ref Commerce Service']
  warehouse_id uuid [not null]
  carrier_code varchar(20) [not null]
  service_type varchar(50)
  tracking_number varchar(100)
  shipping_fee decimal(14,2) [not null, default: 0]
  status varchar(30) [not null, default: 'CREATED']
  recipient_address text [not null]
  carrier_raw_status varchar(100)
  idempotency_key varchar(64) [unique]
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table shipment_status_history {
  id uuid [pk]
  shipment_id uuid [not null]
  from_status varchar(30)
  to_status varchar(30) [not null]
  source varchar(30) [not null]
  raw_payload text
  changed_at datetime [not null]
}

Table carrier_performance {
  id uuid [pk]
  carrier_code varchar(20) [unique, not null]
  total_shipments int [not null, default: 0]
  delivered_count int [not null, default: 0]
  failed_count int [not null, default: 0]
  avg_delivery_hours decimal(8,2)
  updated_at datetime [not null]
}

Table processed_events {
  event_id varchar(100) [pk]
  processed_at datetime [not null]
}

Table outbox_events {
  id uuid [pk]
  aggregate_type varchar(50) [not null]
  aggregate_id uuid [not null]
  event_type varchar(100) [not null]
  payload text [not null]
  published_at datetime
  created_at datetime [not null]
}

Ref: inventory_records.warehouse_id > warehouses.id
Ref: inventory_reservations.warehouse_id > warehouses.id
Ref: inventory_ledger.warehouse_id > warehouses.id
Ref: shipments.warehouse_id > warehouses.id
Ref: shipment_status_history.shipment_id > shipments.id
